Refine ICA-LiNGAM algorithm:
- Revised `IcaLingam` to align with stabilized ICA-LiNG-D pipeline, including optional pre- and post-thresholding steps for W and B̂ matrices.
- Enhanced acyclicity trimming process with cycle detection and smarter edge removal logic.
- Added configurable thresholds for W and B̂, improved verbose logging, and ensured consistent matrix return behavior.
- Simplified and clarified internal methods to improve maintainability.